--- a/app/index.html
+++ b/app/index.html
@@ -31,93 +31,93 @@
       <section class="cars container">
         <h2 class="cars__header">Модели в наличии</h2>
         <div class="cars-list">
-          <div class="car-item"></div>
-          <h3 class="cars-list__title">Model WHT</h3>
-          <div class="cars-list__qty">
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#car"></use>
-              </svg>
-              <div class="cars-list__text">10 А/М В НАЛИЧИИ</div>
-            </div>
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#clock"></use>
-              </svg>
-              <div class="cars-list__text">ЛИЗИНГ А/М</div>
-            </div>
-          </div><img class="cars-list__img" src="images/dest/car1.png">
-          <div class="cars-list__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
-          <div class="btns">
-            <button class="btns__btn btn btn--main">Получить спец. цену</button>
-            <button class="btns__btn btn btn--second">Спец. условия по лизингу</button>
-            <button class="btns__btn btn btn--second">Подобрать автомобиль</button>
+          <div class="car-item">
+            <h3 class="car-item__title">Model WHT</h3>
+            <div class="car-item__qty">
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#car"></use>
+                </svg><span class="car-item__text">10 А/М В НАЛИЧИИ</span>
+              </div>
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#clock"></use>
+                </svg><span class="car-item__text">ЛИЗИНГ А/М</span>
+              </div>
+            </div><img class="car-item__img" src="images/dest/car1.png">
+            <div class="car-item__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
+            <form class="car-item__form">
+              <input class="visually-hidden" value="2" name="id">
+              <button class="car-item__btn btn btn--main">Получить спец. цену</button>
+              <button class="car-item__btn btn btn--second">Спец. условия по лизингу</button>
+              <button class="car-item__btn btn btn--second">Подобрать автомобиль</button>
+            </form>
           </div>
-          <div class="car-item"></div>
-          <h3 class="cars-list__title">Model BLK</h3>
-          <div class="cars-list__qty">
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#car"></use>
-              </svg>
-              <div class="cars-list__text">10 А/М В НАЛИЧИИ</div>
-            </div>
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#clock"></use>
-              </svg>
-              <div class="cars-list__text">ЛИЗИНГ А/М</div>
-            </div>
-          </div><img class="cars-list__img" src="images/dest/car2.png">
-          <div class="cars-list__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
-          <div class="btns">
-            <button class="btns__btn btn btn--main">Получить спец. цену</button>
-            <button class="btns__btn btn btn--second">Спец. условия по лизингу</button>
-            <button class="btns__btn btn btn--second">Подобрать автомобиль</button>
+          <div class="car-item">
+            <h3 class="car-item__title">Model BLK</h3>
+            <div class="car-item__qty">
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#car"></use>
+                </svg><span class="car-item__text">10 А/М В НАЛИЧИИ</span>
+              </div>
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#clock"></use>
+                </svg><span class="car-item__text">ЛИЗИНГ А/М</span>
+              </div>
+            </div><img class="car-item__img" src="images/dest/car2.png">
+            <div class="car-item__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
+            <form class="car-item__form">
+              <input class="visually-hidden" value="2" name="id">
+              <button class="car-item__btn btn btn--main">Получить спец. цену</button>
+              <button class="car-item__btn btn btn--second">Спец. условия по лизингу</button>
+              <button class="car-item__btn btn btn--second">Подобрать автомобиль</button>
+            </form>
           </div>
-          <div class="car-item"></div>
-          <h3 class="cars-list__title">Model BRN</h3>
-          <div class="cars-list__qty">
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#car"></use>
-              </svg>
-              <div class="cars-list__text">10 А/М В НАЛИЧИИ</div>
-            </div>
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#clock"></use>
-              </svg>
-              <div class="cars-list__text">ЛИЗИНГ А/М</div>
-            </div>
-          </div><img class="cars-list__img" src="images/dest/car3.png">
-          <div class="cars-list__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
-          <div class="btns">
-            <button class="btns__btn btn btn--main">Получить спец. цену</button>
-            <button class="btns__btn btn btn--second">Спец. условия по лизингу</button>
-            <button class="btns__btn btn btn--second">Подобрать автомобиль</button>
+          <div class="car-item">
+            <h3 class="car-item__title">Model BRN</h3>
+            <div class="car-item__qty">
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#car"></use>
+                </svg><span class="car-item__text">10 А/М В НАЛИЧИИ</span>
+              </div>
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#clock"></use>
+                </svg><span class="car-item__text">ЛИЗИНГ А/М</span>
+              </div>
+            </div><img class="car-item__img" src="images/dest/car3.png">
+            <div class="car-item__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
+            <form class="car-item__form">
+              <input class="visually-hidden" value="2" name="id">
+              <button class="car-item__btn btn btn--main">Получить спец. цену</button>
+              <button class="car-item__btn btn btn--second">Спец. условия по лизингу</button>
+              <button class="car-item__btn btn btn--second">Подобрать автомобиль</button>
+            </form>
           </div>
-          <div class="car-item"></div>
-          <h3 class="cars-list__title">Model GRN</h3>
-          <div class="cars-list__qty">
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#car"></use>
-              </svg>
-              <div class="cars-list__text">10 А/М В НАЛИЧИИ</div>
-            </div>
-            <div class="cars-list__qty-item">
-              <svg class="car-item__icon" width="20" height="20">
-                <use href="#clock"></use>
-              </svg>
-              <div class="cars-list__text">ЛИЗИНГ А/М</div>
-            </div>
-          </div><img class="cars-list__img" src="images/dest/car4.png">
-          <div class="cars-list__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
-          <div class="btns">
-            <button class="btns__btn btn btn--main">Получить спец. цену</button>
-            <button class="btns__btn btn btn--second">Спец. условия по лизингу</button>
-            <button class="btns__btn btn btn--second">Подобрать автомобиль</button>
+          <div class="car-item">
+            <h3 class="car-item__title">Model GRN</h3>
+            <div class="car-item__qty">
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#car"></use>
+                </svg><span class="car-item__text">10 А/М В НАЛИЧИИ</span>
+              </div>
+              <div class="car-item__qty-item">
+                <svg class="car-item__icon" width="20" height="20">
+                  <use href="#clock"></use>
+                </svg><span class="car-item__text">ЛИЗИНГ А/М</span>
+              </div>
+            </div><img class="car-item__img" src="images/dest/car4.png">
+            <div class="car-item__description">2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод</div>
+            <form class="car-item__form">
+              <input class="visually-hidden" value="2" name="id">
+              <button class="car-item__btn btn btn--main">Получить спец. цену</button>
+              <button class="car-item__btn btn btn--second">Спец. условия по лизингу</button>
+              <button class="car-item__btn btn btn--second">Подобрать автомобиль</button>
+            </form>
           </div>
         </div>
       </section>
@@ -125,10 +125,10 @@
         <h2 class="questions__header">Есть вопросы?</h2>
         <div class="questions__text">Мы перезвоним вам и ответим на любой вопрос</div>
         <form class="questions__form">
-          <input class="questions__input" placeholder="Ваше имя">
-          <input class="questions__input" placeholder="+7 (___) ___-__-__">
+          <input class="questions__input btn" placeholder="Ваше имя">
+          <input class="questions__input btn" placeholder="+7 (___) ___-__-__">
           <button class="questions__btn btn btn--main">Обратный звонок</button>
-        </form><small class="small-text">Нажимая кнопку я подтверждаю свое ознакомление с порядком обработки персональных данных со стороны КОМПАНИИ и даю свободное и осознанное согласие на их обработку, на получение информации по каналам связи, в том числе в рекламных целях. Подробно тут</small>
+        </form><small class="questions__small-text">Нажимая кнопку я подтверждаю свое ознакомление с порядком обработки персональных данных со стороны КОМПАНИИ и даю свободное и осознанное согласие на их обработку, на получение информации по каналам связи, в том числе в рекламных целях. Подробно тут</small>
       </section>
       <section class="map">Map</section>
     </main>
