--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,9 @@
           <button class="questions__btn btn btn--main">Обратный звонок</button>
         </form><small class="questions__small-text">Нажимая кнопку я подтверждаю свое ознакомление с порядком обработки персональных данных со стороны КОМПАНИИ и даю свободное и осознанное согласие на их обработку, на получение информации по каналам связи, в том числе в рекламных целях. Подробно тут</small>
       </section>
-      <section class="map">Map</section>
+      <section class="map">Map<a href="https://yandex.com/maps?utm_medium=mapframe&amp;utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Яндекс Карты</a><a href="https://yandex.com/maps/geo/moskva/53000094/?ll=37.385534%2C55.584227&amp;utm_medium=mapframe&amp;utm_source=maps&amp;z=9" style="color:#eee;font-size:12px;position:absolute;top:14px;">Москва — Яндекс Карты</a>
+        <iframe class="map__frame" src="https://yandex.com/map-widget/v1/?ll=37.385534%2C55.584227&amp;mode=search&amp;ol=geo&amp;ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzAwMDA5NBIa0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAiCg2GeBZCFQEGX0I%2C&amp;z=9" frameborder="1" allowfullscreen="true"></iframe>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
