--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h3 class="header-content__h3">ПРЕМИАЛЬНОЕ КАЧЕСТВО ПО ДОСТУПНЫМ ЦЕНАМ.</h3>
         </div>
         <form class="header-content__form">
-          <input class="btn header-content__input" placeholder="+7 (___) - __ -  __" name="phone">
+          <input class="btn header-content__input" placeholder="+7 (___) - __ -  __">
           <div class="error-message visually-hidden">Необходимо указать номер телефона</div>
           <button class="btn btn--main send-btn">Обратный звонок</button>
         </form>
@@ -126,8 +126,8 @@
         <h2 class="questions__header">Есть вопросы?</h2>
         <div class="questions__text">Мы перезвоним вам и ответим на любой вопрос</div>
         <form class="questions__form">
-          <input class="questions__input btn" placeholder="Ваше имя" name="name">
-          <input class="questions__input btn" placeholder="+7 (___) ___-__-__" name="phone">
+          <input class="questions__input btn" placeholder="Ваше имя">
+          <input class="questions__input btn" placeholder="+7 (___) ___-__-__">
           <button class="btn btn--main questions__btn send-btn">Обратный звонок</button>
           <div class="error-message visually-hidden">Необходимо заполнить все поля</div>
         </form><small class="questions__small-text">Нажимая кнопку я подтверждаю свое ознакомление с порядком обработки персональных данных со стороны КОМПАНИИ и даю свободное и осознанное согласие на их обработку, на получение информации по каналам связи, в том числе в рекламных целях.<a href="#">Подробно тут</a></small>
@@ -148,8 +148,8 @@
         <h3 class="modal__header">Заголовок формы</h3>
         <div class="modal__text">Мы перезвоним вам и ответим на любой вопрос</div>
         <form class="modal__form">
-          <input class="btn modal__input" placeholder="Ваше имя" name="name">
-          <input class="btn modal__input" placeholder="+7 (___) ___-__-__" name="phone">
+          <input class="btn modal__input" placeholder="Ваше имя">
+          <input class="btn modal__input" placeholder="+7 (___) ___-__-__">
           <div class="error-message visually-hidden">Необходимо заполнить все поля</div>
           <button class="btn btn--main modal__btn send-btn">Отправить заявку</button>
         </form><small class="modal__small">Нажимая кнопку я подтверждаю свое ознакомление с порядком обработки персональных данных со стороны КОМПАНИИ и даю свободное и осознанное согласие на их обработку, на получение информации по каналам связи, в том числе в рекламных целях.<br><a class="modal__link" href="#">Подробно тут</a></small>
